--- a/src/index.css
+++ b/src/index.css
@@ -64,3 +64,7 @@
     -ms-overflow-style: none; /* IE and Edge */
     scrollbar-width: none; /* Firefox */
 }
+
+:root {
+    --dp-input-padding: 12px 30px 12px 12px!important;
+}
